--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ import io.pivotal.pal.tracker.gradlebuild.DependenciesGraphPlugin
 
 buildscript {
     ext {
+        springCloudServicesClientLibrariesVersion = "2.1.7.RELEASE"
+        springCloudVersion = "Greenwich.SR5"
         springBootVersion = "2.1.13.RELEASE"
         springVersion = "5.1.14.RELEASE"
         mysqlVersion = "8.0.13"
