--- a/components/allocations/build.gradle
+++ b/components/allocations/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     compile project(":components:rest-support")
+    compile "io.github.resilience4j:resilience4j-spring-boot2:1.2.0"
     compile "org.springframework:spring-jdbc:$springVersion"
 
     testCompile project(":components:test-support")
