--- a/applications/registration-server/src/main/resources/application.properties
+++ b/applications/registration-server/src/main/resources/application.properties
@@ -8,4 +8,6 @@ registration.server.endpoint=http://registration-server
 management.endpoints.web.exposure.include=info,health,metrics,circuitbreakers,env
 security.oauth2.resource.token-info-uri=http://localhost:8999/oauth/check_token
 
+spring.main.allow-bean-definition-overriding=true
+
 application.oauth-enabled=false
